set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_EXTENSIONS off)
add_subdirectory(examples/0001.helloworld)
add_subdirectory(examples/0002.a+b)
add_subdirectory(examples/0003.manipulators)
add_subdirectory(examples/0004.time)
add_subdirectory(examples/0005.sha)
add_subdirectory(examples/0006.file_io)
add_subdirectory(examples/0007.legacy)
